// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`resource composition > snapshots composed .ai guidelines for Next and Vite fixtures 1`] = `
{
  ".ai/guidelines/architectures/data-access-layer.md": "# Data Access Layer

Components do not own transport details. Route remote reads and writes through the data boundary already established by the repository.

## Select the local variant first

- Next server functions may live in shared \`src/api\`, \`server/\`, a feature, or another documented boundary.
- Client server-state may use TanStack Query/react-query-kit, SWR, or a custom abstraction. Use the installed one.
- Generated clients are transport building blocks, not proof of runtime validation. Do not edit generated output; compose generated calls and schemas through the project's wrapper.
- Use the runtime schema library already present (for example Zod or Valibot).

## Server side (Next)

<code-snippet name="Data layer function" lang="ts">
import "server-only"

export async function getInvoices(filter: InvoiceFilter) {
  const response = await apiClient.get("/invoices", { query: filter })
  return invoiceListSchema.parse(response)
}
</code-snippet>

Auth headers, timeouts, cancellation, error-envelope handling, retries, observability, runtime validation, and cache policy belong at this boundary. Caching is capability-sensitive:

- Next 14: use the repository's \`fetch\` cache/revalidation and tags.
- Next 15/16 without Cache Components: preserve the configured \`fetch\`/route model.
- Cache Components enabled: \`"use cache"\`, \`cacheLife\`, and related APIs are available.

## Client side

Components consume the project's existing query/SWR/custom hooks. Stable keys, mutation behavior, cache updates, and invalidation follow nearby code. Do not add TanStack Query to an SWR application or vice versa.

## Rules

- \`NB-ARCH-005\` (error): \`fetch\`/axios/ky in a client component outside the configured data layer and query hooks.
- \`NB-ARCH-006\` (warn): raw network calls in a Server Component outside the data layer.
- Configure locations with \`audit.ruleOptions\` (\`dataLayerGlobs\`, default \`**/api/**\`, \`**/server/**\`, \`lib/api/**\`, \`route.ts\`).

## Anti-patterns

- \`useEffect\` + \`useState\` + \`fetch\` in a component.
- Copy-pasting auth headers per call site.
- Assuming a generated TypeScript client makes untrusted JSON runtime-safe.
- Blanket invalidation when a precise cache update or returned server state is available.
",
  ".ai/guidelines/architectures/feature-modules.md": "# Feature Modules (forbid boundary)

Organize code by feature. In this strict variant features are fully isolated: **no imports between features at all**. Shared code moves down to \`lib/\`/\`components/ui/\`; composite screens are assembled at the route level.

## Structure

<code-snippet name="Feature-first layout" lang="text">
src/
├── features/
│   └── invoices/
│       ├── api/
│       ├── components/
│       ├── hooks/
│       ├── types.ts
│       └── index.ts      # public API consumed ONLY by app/ routes
├── components/ui/        # shared, domain-agnostic UI kit
├── lib/                  # shared utilities, api client
└── app/                  # routes — the ONLY place features are combined
</code-snippet>

## Boundary rules (enforced by node-boost audit)

- \`NB-ARCH-001\` (error): **any** import from one feature into another is forbidden — including via \`index.ts\`.
- \`NB-ARCH-002\` (error): a feature must never import from \`app/**\`. Dependency direction is \`shared → features → app\`.

## How to work within the rules

- Need feature B's component inside feature A's screen? Compose both in the route (\`app/\`), passing data via props.
- Need feature B's types or helpers? Move them to \`lib/\` — if two features need it, it is shared by definition.
- The payoff: zero dependency cycles, features are deletable and extractable wholesale, and every feature can be understood in isolation.

## Anti-patterns

- Smuggling cross-feature access through \`lib/\` wrappers that just re-export a feature's internals.
- A giant "shared" dumping ground — \`lib/\` is for genuinely generic code, not a backdoor.
- Deep relative paths that dodge aliases — the boundary applies regardless of import style.
",
  ".ai/guidelines/architectures/modern-typescript.md": "# Modern TypeScript

The language contract for this codebase: strict compiler, precise types, safe narrowing, and domain modeling proportionate to risk.

## Compiler

\`strict: true\` is non-negotiable (\`NB-ARCH-013\`, warn). New projects also enable \`noUncheckedIndexedAccess\` and \`exactOptionalPropertyTypes\`.

## No \`any\` — narrow \`unknown\`

\`any\` switches the type checker off at every use site (\`NB-ARCH-014\`, warn). For unknown data use \`unknown\` and narrow with guards or the installed schema library (typed-contracts). A cast does not validate external data; keep necessary DOM/library-boundary casts narrow and local. Generated output, declarations, and tests are excluded from the rule.

## Closed sets: discriminated unions + exhaustiveness

<code-snippet name="Union with exhaustive switch" lang="ts">
type PaymentState =
  | { kind: "pending" }
  | { kind: "paid"; paidAt: Date }
  | { kind: "failed"; reason: string }

function label(state: PaymentState): string {
  switch (state.kind) {
    case "pending": return "Pending"
    case "paid":    return \`Paid \${state.paidAt.toLocaleDateString()}\`
    case "failed":  return state.reason
    default: { const _exhaustive: never = state; throw new Error("unreachable") }
  }
}
// Adding { kind: "refunded" } breaks the build HERE — every switch is found for you.
</code-snippet>

For new local APIs, literal unions or const objects often produce simpler emitted code. Preserve established domain enums and generated contracts unless a coordinated migration has a concrete compatibility or maintenance benefit.

## Branded types for identifiers

<code-snippet name="IDs that cannot be swapped" lang="ts">
type UserId = string & { readonly __brand: "UserId" }
type InvoiceId = string & { readonly __brand: "InvoiceId" }
// payInvoice(userId, invoiceId) with swapped args → compile error, not a prod bug
</code-snippet>

Brands have zero runtime cost but add construction and interoperability overhead. Use them for high-risk, easily confused values when the repository already has—or explicitly adopts—a safe boundary; do not brand every identifier by default.

## Also

- \`satisfies\` to type-check without widening: \`const config = {...} satisfies Config\`.
- Prefer \`readonly\` arrays/fields on data that must not mutate.
",
  ".ai/guidelines/architectures/server-first-components.md": "# Server-First Components

In the App Router, components are Server Components by default. Keep them that way: fetch data on the server, ship less JavaScript, and push \`"use client"\` down to interactive leaves.

## Rules

- Never put \`"use client"\` in \`page.tsx\` or \`layout.tsx\` (\`NB-ARCH-003\`, error). Route entries stay server-side; extract the interactive part into a leaf component instead.
- Do not add \`"use client"\` to files with no hooks, event handlers, or browser APIs (\`NB-ARCH-004\`, warn) — the directive is not a talisman, it makes the whole subtree client-side.
- A genuinely full-client page (canvas playground, embedded editor shell) is a documented exception: \`// nb-disable NB-ARCH-003 -- <reason>\`.

<code-snippet name="Interactive leaf, server entry" lang="tsx">
// app/invoices/page.tsx — Server Component: async, fetches data
export default async function InvoicesPage() {
  const invoices = await getInvoices()
  return <InvoiceTable invoices={invoices} toolbar={<InvoiceFilter />} />
}

// features/invoices/components/InvoiceFilter.tsx — client leaf
"use client"
export function InvoiceFilter() {
  const [query, setQuery] = useState("")
  return <input value={query} onChange={(e) => setQuery(e.target.value)} />
}
</code-snippet>

## Mental model

\`"use client"\` marks a boundary, not a component: everything imported below it becomes client code. Server Components can render Client Components and pass serializable props (no functions, no class instances) — compose interactivity in, don't lift the whole page out.

## Next 16 capability check

- \`"use cache"\`, \`cacheLife\`, and the Cache Components shell/dynamic-hole model require \`cacheComponents: true\` in \`next.config.*\`.
- Without that flag, keep the project's fetch/revalidation and dynamic-rendering model; server-first boundaries still reduce client JavaScript.
- Do not generate legacy idioms: \`getServerSideProps\`/\`getStaticProps\` belong to the Pages Router, not here.
",
  ".ai/guidelines/architectures/typed-contracts.md": "# Typed Contracts

TypeScript types do not exist at runtime. Validate external data at system boundaries with the schema library already used by the repository (for example Zod or Valibot), derive types where that library supports it, and trust values only after parsing.

## Validate at the boundary

1. **API responses**—parse untrusted success payloads and relevant error envelopes in the data layer. Generated TypeScript clients do not make runtime JSON trustworthy. Generated runtime schemas are useful only when the application actually invokes them.
2. **User input**—validate through the established form integration and again at every server endpoint; handle coercion explicitly.
3. **Environment variables**—centralize them in a validated env module (\`NB-ARCH-008\`).
4. **URL params/search state**—parse them as untrusted strings, including through an installed URL-state library such as \`nuqs\`.

<code-snippet name="Schema as single source of truth" lang="ts">
export const invoiceSchema = z.object({
  id: z.string(),
  amount: z.number(),
  status: z.enum(["draft", "paid", "void"]),
})
export type Invoice = z.infer<typeof invoiceSchema>
</code-snippet>

The snippet uses Zod; use the equivalent Valibot or project-specific schema when that is the established dependency.

## Rules

- Do not cast external data to its hoped-for type. Parse it (\`NB-ARCH-007\` flags raw JSON boundaries in configured data-layer paths).
- Generated files are excluded, but manual endpoints and wrappers remain audited even when Orval/openapi-typescript is installed.
- If runtime validation is centralized in a project helper, list its imported function name under \`NB-ARCH-007\`'s \`runtimeValidatorFunctions\` rule option; arbitrary function names are not trusted automatically.
- Define whether validation is fail-closed or fail-open with telemetry. A validator that only logs and returns original data is observability, not enforcement.
- Avoid duplicate schemas for the same contract; compose or derive narrower views with the installed library.
",
  ".ai/guidelines/core.md": "# Node Boost Core

Baseline for AI-assisted work in this repository. Package guidelines are composed from detected dependencies; architecture guidelines are explicitly selected or inferred from concrete capabilities. Local \`AGENTS.md\`, README instructions, scripts, and nearby code remain authoritative project conventions.

## Working rules

- Read local instructions and package scripts, then match the detected stack and versions (use \`application_info\` when Node Boost is installed). Version-specific guidelines override generic knowledge, but a framework version alone does not prove that an optional compiler or feature flag is enabled.
- Follow the enabled architecture guidelines (indexed in \`node-boost.md\`); the \`audit\`/\`guard\` commands enforce their rules (\`NB-ARCH-xxx\`). Use \`explain <ID>\` when a finding is unclear.
- Suppressing a finding requires a reason: \`// nb-disable NB-ARCH-xxx -- <why>\`. Unreasoned suppressions are flagged.
- After completing changes, use the repository's documented validation commands. When Node Boost is installed, also run \`node-boost audit --changed\` (or rely on its Stop hook).

## Repository hygiene

- Do not leave dead code: unused exports, files and dependencies are context noise for both humans and agents. \`knip\` finds them — prefer removing over commenting out.
- Keep \`node-boost.json\` and generated \`.ai/**\` files committed; regenerate with \`node-boost update\` after dependency upgrades (\`doctor\` detects drift).
",
  ".ai/guidelines/next/16.md": "# Next.js 16

This project runs Next 16. First inspect \`next.config.*\`: Cache Components is optional and \`"use cache"\` requires \`cacheComponents: true\`.

- With Cache Components enabled, opt in at the function/component level with \`"use cache"\`, control lifetimes with \`cacheLife()\`, and use tag invalidation supported by that model.
- Without Cache Components, preserve the project's existing \`fetch\` cache/revalidation or dynamic-rendering approach. Do not insert \`"use cache"\`, \`cacheLife()\`, or \`updateTag()\`.
- Cache Components combines a cacheable shell with dynamic holes defined by \`<Suspense>\` boundaries. Describe this as active only when \`cacheComponents: true\` is present.
- \`params\` and \`searchParams\` in pages/layouts are async—\`await\` them.
- When Cache Components is enabled, prefer its APIs for new cache behavior. Otherwise, \`fetch(..., { next: { revalidate } })\`, route config, or existing wrappers may still be the project's correct model.
- Turbopack is the default bundler; do not add webpack-specific config unless the project already has it.

<code-snippet name="Explicit caching in the data layer" lang="ts">
// Only when next.config.* enables cacheComponents.
export async function getInvoices() {
  "use cache"
  cacheLife("minutes")
  return invoiceListSchema.parse(await apiClient.get("/invoices"))
}
</code-snippet>
",
  ".ai/guidelines/next/core.md": "# Next.js Core

- App Router conventions: routes are folders; \`page.tsx\` renders, \`layout.tsx\` wraps, \`route.ts\` handles HTTP, \`loading.tsx\`/\`error.tsx\` are boundaries. Do not mix in Pages Router idioms (\`getServerSideProps\`, \`getStaticProps\`, \`_app.tsx\`) unless the project actually uses \`pages/\`.
- Components are Server Components by default; \`"use client"\` only on interactive leaves (see server-first-components guideline).
- Data flows through the project's established data layer. Mutations may use Server Actions, Route Handlers, or the installed client cache/form stack; every server endpoint still needs auth, authorization, and runtime validation.
- Use the framework's primitives before reaching for libraries: \`next/image\` for images, \`next/font\` for fonts, \`next/link\` for navigation, Metadata API for \`<head>\`.
- Route params and \`searchParams\` are untrusted input — validate before use.
- Prefer \`redirect()\`/\`notFound()\` from the server over client-side workarounds.
",
  ".ai/guidelines/node-boost.md": "# node-boost guidelines

## Stack

- name: next
- router: app
- package manager: npm
- linting: eslint-prettier

## Capabilities

- React Compiler configured: no
- Next Cache Components enabled: no

## Packages

- eslint: 10.6.0 (range)
- next: 16.2.9 (range)
- prettier: 3.6.2 (range)
- react: 19.2.7 (range)
- tailwindcss: 4.3.1 (range)
- typescript: 5.9.3 (range)
- vitest: 3.2.0 (range)
- zod: 4.0.0 (range)

## Library Documentation

- .ai/docs/llms.txt (version-aware official documentation and exact package references)

## Architectures

- feature-modules (forbid)
- server-first-components
- data-access-layer
- typed-contracts
- modern-typescript

## Files

- .ai/guidelines/architectures/data-access-layer.md: node-boost built-in
- .ai/guidelines/architectures/feature-modules.md: node-boost built-in
- .ai/guidelines/architectures/modern-typescript.md: node-boost built-in
- .ai/guidelines/architectures/server-first-components.md: node-boost built-in
- .ai/guidelines/architectures/typed-contracts.md: node-boost built-in
- .ai/guidelines/core.md: node-boost built-in
- .ai/guidelines/next/16.md: node-boost built-in
- .ai/guidelines/next/core.md: node-boost built-in
- .ai/guidelines/react/19.md: node-boost built-in
- .ai/guidelines/react/core.md: node-boost built-in
- .ai/guidelines/tailwindcss/4.md: node-boost built-in
- .ai/guidelines/tailwindcss/core.md: node-boost built-in
- .ai/guidelines/testing/vitest.md: node-boost built-in
- .ai/guidelines/typescript/core.md: node-boost built-in
- .ai/guidelines/zod/4.md: node-boost built-in
- .ai/guidelines/zod/core.md: node-boost built-in
",
  ".ai/guidelines/react/19.md": "# React 19

This project runs React 19. Use its APIs when they match the project's established architecture and configured build capabilities.

- New function components can accept \`ref\` as a prop. Existing \`forwardRef\` components remain valid; preserve them when compatibility, a component library, or nearby code expects that API.
- React Compiler is a separate build-time integration. Only rely on automatic memoization after verifying the compiler plugin/configuration is enabled; otherwise preserve intentional \`useCallback\`/\`useMemo\`/\`React.memo\` usage.
- Actions are available: \`<form action={fn}>\`, \`useActionState\`, \`useFormStatus\`, and \`useOptimistic\`. Adopt them when the app uses an Action-based mutation flow; they do not replace an established query/SWR/form architecture merely because React is 19.
- \`use(promise)\` unwraps promises in render (with Suspense); \`use(Context)\` replaces \`useContext\` and may be called conditionally.
- Metadata tags (\`<title>\`, \`<meta>\`) render from components and hoist automatically (in non-Next apps).
- Prefer TypeScript types and default parameters over \`propTypes\`/function-component \`defaultProps\` in new TypeScript code.
",
  ".ai/guidelines/react/core.md": "# React Core

- Components are pure functions of props/state — side effects live in event handlers, the data layer, or (rarely) effects that sync with external systems.
- Compute derived data during render; do not mirror props into state or chain \`useEffect\` + \`setState\` (see custom-hooks guideline).
- Lists need stable \`key\`s from the data, never array indexes for dynamic lists.
- Prefer composition (children/slots) over configuration props (see component-composition guideline).
- Keep state close to where it is used; escalate deliberately (see state-management guideline).
- Semantic HTML first: \`<button>\`, \`<a>\`, \`<label>\` — not clickable \`<div>\`s.
- Follow the version-specific React guideline in this directory — React idioms shift across majors and training data lags behind.
",
  ".ai/guidelines/tailwindcss/4.md": "# Tailwind CSS 4

This project runs Tailwind 4 — configuration is CSS-first. Do not generate v3 idioms.

- Configuration is CSS-first: \`@import "tailwindcss"\` plus \`@theme { --color-brand: ...; }\` for tokens. Do not create a JS config by default; preserve deliberate legacy JavaScript configuration loaded through \`@config\`.
- Theme tokens are CSS variables, usable directly (\`var(--color-brand)\`) and generating utilities automatically.
- No \`content\` array to maintain — sources are auto-detected; no PostCSS \`autoprefixer\`/\`postcss-import\` boilerplate (built in via \`@tailwindcss/postcss\` or the Vite plugin).
- v3 → v4 renames to respect: \`shadow-sm\` → \`shadow-xs\`, \`outline-none\` → \`outline-hidden\`, ring default width changed — check migrated class names rather than assuming v3 scales.
- Custom utilities via \`@utility\`, plugins via \`@plugin\` — in CSS, not JS.
",
  ".ai/guidelines/tailwindcss/core.md": "# Tailwind CSS Core

- Utility-first in JSX; reuse through React components, not through custom CSS classes. Keep \`@apply\` to a rare minimum.
- Never construct class names dynamically (\`text-\${color}-500\`) — the compiler scans sources statically; interpolated classes silently don't exist. Map conditions to full literal class strings.
- Use theme tokens for colors/spacing; arbitrary values (\`w-[347px]\`) are one-off exceptions with a reason.
- Use the repository's existing variant/merge mechanism (often CVA + \`tailwind-merge\`); simple conditional classes may stay simple.
- Keep class order consistent with the project's formatter (prettier-plugin-tailwindcss or Biome's sorting).
- Follow the version-specific Tailwind guideline — configuration differs fundamentally between v3 and v4.
",
  ".ai/guidelines/testing/vitest.md": "# Vitest

- Runner for unit and component tests; component tests use Testing Library + \`@testing-library/jest-dom\` matchers only when those packages and a DOM environment are configured.
- Test behavior through roles/labels when Testing Library is installed. Use MSW when present; otherwise follow the repository's established network seam.
- Structure: \`describe\` per unit/feature, test names state observable behavior ("shows validation error when amount is empty").
- Use \`vi.fn()\`/\`vi.spyOn()\` for collaborator seams. Focused \`vi.mock()\` usage can be appropriate for a deliberate unit boundary; restore mocks between tests.
- Keep tests deterministic: fake timers for time-dependent logic (\`vi.useFakeTimers\`), no real network, no ordering dependence.
- Run focused and full tests through the repository's documented package-manager command or wrapper. Do not assume \`npm test\`; some projects require Yarn, pnpm, Make targets, code generation, or i18n compilation first.
",
  ".ai/guidelines/typescript/core.md": "# TypeScript Core

- \`strict: true\` is the floor; treat compiler errors as design feedback, not noise to cast away.
- Avoid \`any\` and unjustified casts on external data—use \`unknown\` + narrowing or the installed runtime schema (see typed-contracts and modern-typescript).
- Model new local closed sets with discriminated unions/const objects where useful; preserve established or generated enums unless a coordinated migration has a concrete benefit.
- Derive types instead of duplicating them through the installed schema library, \`ReturnType\`, \`Pick\`/\`Omit\`, and \`satisfies\`.
- Colocate types with their domain using the repository's established layout. Brand only high-risk, easily confused values with a safe construction boundary.
",
  ".ai/guidelines/zod/4.md": "# Zod 4

This project runs zod 4 — several v3 idioms are gone or renamed. Do not generate v3 API.

- String formats are top-level: \`z.email()\`, \`z.url()\`, \`z.uuid()\` — NOT \`z.string().email()\` (deprecated/removed in v4).
- Error customization is unified under \`error\`: \`z.string({ error: "Required" })\`, \`.min(5, { error: "Too short" })\` — NOT \`message\`, \`required_error\`, \`invalid_type_error\`, or \`errorMap\`.
- \`z.strictObject({...})\`/\`z.looseObject({...})\` replace \`.strict()\`/\`.passthrough()\` styles; default objects strip unknown keys.
- Discriminated unions and recursive types are stronger — prefer \`z.discriminatedUnion\` for tagged payloads.
- Need a slim client bundle? \`zod/mini\` exists (functional API) — only introduce it if the project already uses it.
- Records: \`z.record(z.string(), valueSchema)\` requires the key schema explicitly.
",
  ".ai/guidelines/zod/core.md": "# Zod Core

- Validate at system boundaries only: API responses (data layer), form/action input, env, URL params. Inside the app, the inferred type is the truth — no re-parsing (see typed-contracts guideline).
- One schema per contract, types derived with \`z.infer\`; narrower views via \`.pick()\`/\`.omit()\`/\`.extend()\`, not re-declared interfaces.
- \`.parse()\` when failure is a bug (throw), \`.safeParse()\` when failure is a flow (form input, external data you degrade gracefully on).
- Keep schemas next to the data layer that uses them (\`features/<x>/api/schemas.ts\`).
- Follow the version-specific zod guideline — the v3 → v4 API changed materially.
",
}
`;

exports[`resource composition > snapshots composed .ai guidelines for Next and Vite fixtures 2`] = `
{
  ".ai/guidelines/architectures/data-access-layer.md": "# Data Access Layer

Components do not own transport details. Route remote reads and writes through the data boundary already established by the repository.

## Select the local variant first

- Next server functions may live in shared \`src/api\`, \`server/\`, a feature, or another documented boundary.
- Client server-state may use TanStack Query/react-query-kit, SWR, or a custom abstraction. Use the installed one.
- Generated clients are transport building blocks, not proof of runtime validation. Do not edit generated output; compose generated calls and schemas through the project's wrapper.
- Use the runtime schema library already present (for example Zod or Valibot).

## Server side (Next)

<code-snippet name="Data layer function" lang="ts">
import "server-only"

export async function getInvoices(filter: InvoiceFilter) {
  const response = await apiClient.get("/invoices", { query: filter })
  return invoiceListSchema.parse(response)
}
</code-snippet>

Auth headers, timeouts, cancellation, error-envelope handling, retries, observability, runtime validation, and cache policy belong at this boundary. Caching is capability-sensitive:

- Next 14: use the repository's \`fetch\` cache/revalidation and tags.
- Next 15/16 without Cache Components: preserve the configured \`fetch\`/route model.
- Cache Components enabled: \`"use cache"\`, \`cacheLife\`, and related APIs are available.

## Client side

Components consume the project's existing query/SWR/custom hooks. Stable keys, mutation behavior, cache updates, and invalidation follow nearby code. Do not add TanStack Query to an SWR application or vice versa.

## Rules

- \`NB-ARCH-005\` (error): \`fetch\`/axios/ky in a client component outside the configured data layer and query hooks.
- \`NB-ARCH-006\` (warn): raw network calls in a Server Component outside the data layer.
- Configure locations with \`audit.ruleOptions\` (\`dataLayerGlobs\`, default \`**/api/**\`, \`**/server/**\`, \`lib/api/**\`, \`route.ts\`).

## Anti-patterns

- \`useEffect\` + \`useState\` + \`fetch\` in a component.
- Copy-pasting auth headers per call site.
- Assuming a generated TypeScript client makes untrusted JSON runtime-safe.
- Blanket invalidation when a precise cache update or returned server state is available.
",
  ".ai/guidelines/architectures/feature-modules.md": "# Feature Modules (public-api boundary)

Organize code by feature. Each feature is a module with a public API in \`index.ts\`; cross-feature imports are allowed **only through that public API**.

## Structure

<code-snippet name="Feature-first layout" lang="text">
src/
├── features/
│   └── invoices/
│       ├── api/          # data access for this feature
│       ├── components/
│       ├── hooks/
│       ├── types.ts
│       └── index.ts      # PUBLIC API — the only cross-feature entry point
├── components/ui/        # shared, domain-agnostic UI kit
├── lib/                  # shared utilities, api client
└── app/                  # routes — compose features, no business logic
</code-snippet>

## Boundary rules (enforced by node-boost audit)

- \`NB-ARCH-001\` (error): importing another feature's internals is forbidden. \`import { CartSummary } from "@/features/cart"\` is fine; \`import { store } from "@/features/cart/internal/store"\` is not.
- \`NB-ARCH-002\` (error): a feature must never import from \`app/**\`. Dependency direction is \`shared → features → app\`.

## Conventions

- Keep \`index.ts\` deliberately small — every export is a contract. If a feature's public API grows past ~10 exports, it is probably two features.
- Shared code goes down to \`lib/\` or \`components/ui/\`, never sideways between features.
- Watch for cycles: if feature A imports B and B imports A (even via \`index.ts\`), extract the shared piece to \`lib/\` or compose both at the route level.
- Do not introduce \`features/\` prematurely — adopt it when a second feature starts bleeding into the first.

## Anti-patterns

- Re-exporting everything from \`index.ts\` "just in case" — large barrels hurt tree-shaking and make everything public.
- "Shared" modules importing from features (upward dependency).
- Deep relative paths (\`../../cart/...\`) that dodge the alias — the boundary applies regardless of import style.
",
  ".ai/guidelines/architectures/modern-typescript.md": "# Modern TypeScript

The language contract for this codebase: strict compiler, precise types, safe narrowing, and domain modeling proportionate to risk.

## Compiler

\`strict: true\` is non-negotiable (\`NB-ARCH-013\`, warn). New projects also enable \`noUncheckedIndexedAccess\` and \`exactOptionalPropertyTypes\`.

## No \`any\` — narrow \`unknown\`

\`any\` switches the type checker off at every use site (\`NB-ARCH-014\`, warn). For unknown data use \`unknown\` and narrow with guards or the installed schema library (typed-contracts). A cast does not validate external data; keep necessary DOM/library-boundary casts narrow and local. Generated output, declarations, and tests are excluded from the rule.

## Closed sets: discriminated unions + exhaustiveness

<code-snippet name="Union with exhaustive switch" lang="ts">
type PaymentState =
  | { kind: "pending" }
  | { kind: "paid"; paidAt: Date }
  | { kind: "failed"; reason: string }

function label(state: PaymentState): string {
  switch (state.kind) {
    case "pending": return "Pending"
    case "paid":    return \`Paid \${state.paidAt.toLocaleDateString()}\`
    case "failed":  return state.reason
    default: { const _exhaustive: never = state; throw new Error("unreachable") }
  }
}
// Adding { kind: "refunded" } breaks the build HERE — every switch is found for you.
</code-snippet>

For new local APIs, literal unions or const objects often produce simpler emitted code. Preserve established domain enums and generated contracts unless a coordinated migration has a concrete compatibility or maintenance benefit.

## Branded types for identifiers

<code-snippet name="IDs that cannot be swapped" lang="ts">
type UserId = string & { readonly __brand: "UserId" }
type InvoiceId = string & { readonly __brand: "InvoiceId" }
// payInvoice(userId, invoiceId) with swapped args → compile error, not a prod bug
</code-snippet>

Brands have zero runtime cost but add construction and interoperability overhead. Use them for high-risk, easily confused values when the repository already has—or explicitly adopts—a safe boundary; do not brand every identifier by default.

## Also

- \`satisfies\` to type-check without widening: \`const config = {...} satisfies Config\`.
- Prefer \`readonly\` arrays/fields on data that must not mutate.
",
  ".ai/guidelines/architectures/state-management.md": "# State Management

Classify state before placing it. Each kind has exactly one correct home; most bugs come from putting server data in a client store.

| Kind | Example | Home |
|---|---|---|
| Server state | invoices, users | installed server cache (Query/SWR) or RSC props |
| Local UI state | open modal, input value | \`useState\` in the component |
| Shared client state | theme, sidebar, multi-step draft | Context (rare updates) / store like zustand (frequent) |
| URL state | filters, pagination, active tab | \`searchParams\` |

## The one big rule: server state is a cache, not state

<code-snippet name="Anti-pattern: copying cache into a store" lang="ts">
// WRONG — two sources of truth, manual sync, staleness bugs (NB-ARCH-009, warn)
const invoices = await api.getInvoices()
useInvoiceStore.setState({ invoices })
</code-snippet>

The installed server-state mechanism already owns keys, freshness, refetch, and mutation updates. Use TanStack Query/react-query-kit, SWR, RSC, or the repository's custom boundary as detected; do not introduce a second cache library. A client store holds only what the backend does not know (preferences, drafts, selections).

## Escalation ladder

\`useState\` → URL → Context → store. Escalate only when the level below fails. URL state is underused: filters and pagination in \`searchParams\` give deep links, back button and refresh survival for free.

## Next specifics

Server Components remove the need for much client state—data arriving as props needs no client cache. Use a client cache only for interactive regions that need it and follow the library already installed.

## Anti-patterns

- A global store as junk drawer (2016-Redux style).
- Deriving state with \`useEffect\` + \`setState\` — compute it during render instead.
- Duplicating URL state in a store and syncing by hand.
",
  ".ai/guidelines/architectures/typed-contracts.md": "# Typed Contracts

TypeScript types do not exist at runtime. Validate external data at system boundaries with the schema library already used by the repository (for example Zod or Valibot), derive types where that library supports it, and trust values only after parsing.

## Validate at the boundary

1. **API responses**—parse untrusted success payloads and relevant error envelopes in the data layer. Generated TypeScript clients do not make runtime JSON trustworthy. Generated runtime schemas are useful only when the application actually invokes them.
2. **User input**—validate through the established form integration and again at every server endpoint; handle coercion explicitly.
3. **Environment variables**—centralize them in a validated env module (\`NB-ARCH-008\`).
4. **URL params/search state**—parse them as untrusted strings, including through an installed URL-state library such as \`nuqs\`.

<code-snippet name="Schema as single source of truth" lang="ts">
export const invoiceSchema = z.object({
  id: z.string(),
  amount: z.number(),
  status: z.enum(["draft", "paid", "void"]),
})
export type Invoice = z.infer<typeof invoiceSchema>
</code-snippet>

The snippet uses Zod; use the equivalent Valibot or project-specific schema when that is the established dependency.

## Rules

- Do not cast external data to its hoped-for type. Parse it (\`NB-ARCH-007\` flags raw JSON boundaries in configured data-layer paths).
- Generated files are excluded, but manual endpoints and wrappers remain audited even when Orval/openapi-typescript is installed.
- If runtime validation is centralized in a project helper, list its imported function name under \`NB-ARCH-007\`'s \`runtimeValidatorFunctions\` rule option; arbitrary function names are not trusted automatically.
- Define whether validation is fail-closed or fail-open with telemetry. A validator that only logs and returns original data is observability, not enforcement.
- Avoid duplicate schemas for the same contract; compose or derive narrower views with the installed library.
",
  ".ai/guidelines/core.md": "# Node Boost Core

Baseline for AI-assisted work in this repository. Package guidelines are composed from detected dependencies; architecture guidelines are explicitly selected or inferred from concrete capabilities. Local \`AGENTS.md\`, README instructions, scripts, and nearby code remain authoritative project conventions.

## Working rules

- Read local instructions and package scripts, then match the detected stack and versions (use \`application_info\` when Node Boost is installed). Version-specific guidelines override generic knowledge, but a framework version alone does not prove that an optional compiler or feature flag is enabled.
- Follow the enabled architecture guidelines (indexed in \`node-boost.md\`); the \`audit\`/\`guard\` commands enforce their rules (\`NB-ARCH-xxx\`). Use \`explain <ID>\` when a finding is unclear.
- Suppressing a finding requires a reason: \`// nb-disable NB-ARCH-xxx -- <why>\`. Unreasoned suppressions are flagged.
- After completing changes, use the repository's documented validation commands. When Node Boost is installed, also run \`node-boost audit --changed\` (or rely on its Stop hook).

## Repository hygiene

- Do not leave dead code: unused exports, files and dependencies are context noise for both humans and agents. \`knip\` finds them — prefer removing over commenting out.
- Keep \`node-boost.json\` and generated \`.ai/**\` files committed; regenerate with \`node-boost update\` after dependency upgrades (\`doctor\` detects drift).
",
  ".ai/guidelines/node-boost.md": "# node-boost guidelines

## Stack

- name: vite-react
- router: react-router
- package manager: pnpm
- linting: biome

## Capabilities

- React Compiler configured: no
- Next Cache Components enabled: no

## Packages

- @biomejs/biome: 2.3.8 (range)
- @tanstack/react-query: 5.0.0 (range)
- react: 19.0.0 (range)
- react-router: 7.1.0 (range)
- typescript: 5.9.3 (range)
- vite: 6.0.0 (range)
- vitest: 3.2.0 (range)
- zustand: 5.0.0 (range)

## Library Documentation

- .ai/docs/llms.txt (version-aware official documentation and exact package references)

## Architectures

- feature-modules (public-api)
- data-access-layer
- typed-contracts
- state-management
- modern-typescript

## Files

- .ai/guidelines/architectures/data-access-layer.md: node-boost built-in
- .ai/guidelines/architectures/feature-modules.md: node-boost built-in
- .ai/guidelines/architectures/modern-typescript.md: node-boost built-in
- .ai/guidelines/architectures/state-management.md: node-boost built-in
- .ai/guidelines/architectures/typed-contracts.md: node-boost built-in
- .ai/guidelines/core.md: node-boost built-in
- .ai/guidelines/react-query/core.md: node-boost built-in
- .ai/guidelines/react-router/7.md: node-boost built-in
- .ai/guidelines/react-router/core.md: node-boost built-in
- .ai/guidelines/react/19.md: node-boost built-in
- .ai/guidelines/react/core.md: node-boost built-in
- .ai/guidelines/testing/vitest.md: node-boost built-in
- .ai/guidelines/typescript/core.md: node-boost built-in
- .ai/guidelines/vite/core.md: node-boost built-in
- .ai/guidelines/zustand/core.md: node-boost built-in
",
  ".ai/guidelines/react-query/core.md": "# TanStack Query Core

- react-query owns server state — it is a cache, not a store. Never copy query results into zustand/Context (see state-management guideline).
- Components consume query hooks from the feature (\`useInvoices()\`), never \`useQuery\` inline with a raw fetch (see data-access-layer guideline).
- Query keys are structured and centralized per feature: \`["invoices", filter]\` — keys are the cache identity, treat them as an API.
- Mutations invalidate what they change: \`useMutation\` + \`queryClient.invalidateQueries({ queryKey: ["invoices"] })\` on success; optimistic updates via \`onMutate\`/\`onError\` rollback where UX warrants it.
- Handle all result states in the UI: \`isLoading\`, \`isError\`, empty data (see ui-states guideline).
- Configure sensible \`staleTime\` per data class instead of refetching everything on every focus.
",
  ".ai/guidelines/react-router/7.md": "# React Router 7

This project runs React Router 7 — the merged react-router package. Do not generate v5/v6-era imports or idioms.

- React Router 7 supports the merged \`react-router\` package, while existing \`react-router-dom\` imports may remain. Check the declared dependency and local import style; do not rewrite imports solely for version conformity.
- v7 spans modes: library mode (manual \`<Routes>\`/\`createBrowserRouter\`) and framework mode (file conventions, loaders/actions). **Match the project's existing mode** — do not introduce loaders/actions into a library-mode SPA that fetches via react-query.
- In library mode, preserve the installed server-state mechanism (Query/SWR/custom); do not move ownership into router loaders solely because v7 supports them.
- Use \`createBrowserRouter\`/route objects over JSX route trees for new route configuration; type route params where the setup provides typegen.
- No \`<Switch>\`, no \`useHistory\` (v5 relics) — \`<Routes>\`, \`useNavigate\`, \`useSearchParams\`.
",
  ".ai/guidelines/react-router/core.md": "# React Router Core

- Discover the existing route style and keep new definitions with its central route tree. Use existing constants/typed helpers when present; do not mandate a new constants layer for a codebase that consistently uses route literals.
- URL is state: filters, pagination, tabs and other shareable view state belong in \`searchParams\`, not in a store (see state-management guideline).
- Use \`<Link>\`/\`<NavLink>\`/\`useNavigate\` for ordinary SPA transitions. Full-document navigation is intentional for external destinations, downloads, auth handoffs, or forced reloads.
- Route params are untrusted input: validate/parse before use (see typed-contracts guideline).
- Lazy-load route components where bundle size or route isolation justifies it; a small route need not gain an artificial split. Provide an appropriate fallback for genuinely asynchronous route chunks.
",
  ".ai/guidelines/react/19.md": "# React 19

This project runs React 19. Use its APIs when they match the project's established architecture and configured build capabilities.

- New function components can accept \`ref\` as a prop. Existing \`forwardRef\` components remain valid; preserve them when compatibility, a component library, or nearby code expects that API.
- React Compiler is a separate build-time integration. Only rely on automatic memoization after verifying the compiler plugin/configuration is enabled; otherwise preserve intentional \`useCallback\`/\`useMemo\`/\`React.memo\` usage.
- Actions are available: \`<form action={fn}>\`, \`useActionState\`, \`useFormStatus\`, and \`useOptimistic\`. Adopt them when the app uses an Action-based mutation flow; they do not replace an established query/SWR/form architecture merely because React is 19.
- \`use(promise)\` unwraps promises in render (with Suspense); \`use(Context)\` replaces \`useContext\` and may be called conditionally.
- Metadata tags (\`<title>\`, \`<meta>\`) render from components and hoist automatically (in non-Next apps).
- Prefer TypeScript types and default parameters over \`propTypes\`/function-component \`defaultProps\` in new TypeScript code.
",
  ".ai/guidelines/react/core.md": "# React Core

- Components are pure functions of props/state — side effects live in event handlers, the data layer, or (rarely) effects that sync with external systems.
- Compute derived data during render; do not mirror props into state or chain \`useEffect\` + \`setState\` (see custom-hooks guideline).
- Lists need stable \`key\`s from the data, never array indexes for dynamic lists.
- Prefer composition (children/slots) over configuration props (see component-composition guideline).
- Keep state close to where it is used; escalate deliberately (see state-management guideline).
- Semantic HTML first: \`<button>\`, \`<a>\`, \`<label>\` — not clickable \`<div>\`s.
- Follow the version-specific React guideline in this directory — React idioms shift across majors and training data lags behind.
",
  ".ai/guidelines/testing/vitest.md": "# Vitest

- Runner for unit and component tests; component tests use Testing Library + \`@testing-library/jest-dom\` matchers only when those packages and a DOM environment are configured.
- Test behavior through roles/labels when Testing Library is installed. Use MSW when present; otherwise follow the repository's established network seam.
- Structure: \`describe\` per unit/feature, test names state observable behavior ("shows validation error when amount is empty").
- Use \`vi.fn()\`/\`vi.spyOn()\` for collaborator seams. Focused \`vi.mock()\` usage can be appropriate for a deliberate unit boundary; restore mocks between tests.
- Keep tests deterministic: fake timers for time-dependent logic (\`vi.useFakeTimers\`), no real network, no ordering dependence.
- Run focused and full tests through the repository's documented package-manager command or wrapper. Do not assume \`npm test\`; some projects require Yarn, pnpm, Make targets, code generation, or i18n compilation first.
",
  ".ai/guidelines/typescript/core.md": "# TypeScript Core

- \`strict: true\` is the floor; treat compiler errors as design feedback, not noise to cast away.
- Avoid \`any\` and unjustified casts on external data—use \`unknown\` + narrowing or the installed runtime schema (see typed-contracts and modern-typescript).
- Model new local closed sets with discriminated unions/const objects where useful; preserve established or generated enums unless a coordinated migration has a concrete benefit.
- Derive types instead of duplicating them through the installed schema library, \`ReturnType\`, \`Pick\`/\`Omit\`, and \`satisfies\`.
- Colocate types with their domain using the repository's established layout. Brand only high-risk, easily confused values with a safe construction boundary.
",
  ".ai/guidelines/vite/core.md": "# Vite Core

- This is a client-rendered SPA: every component is client code, all secrets stay on the backend — the browser bundle is public.
- Env variables: only \`VITE_\`-prefixed values reach the client (\`import.meta.env.VITE_X\`) — and they are readable by every visitor. Never prefix secrets; validate env in one \`env.ts\` (see typed-contracts and secure-by-default guidelines).
- Use \`import.meta.env\` (\`DEV\`, \`PROD\`, \`MODE\`) — not \`process.env\` in app code.
- Code-split at route level with dynamic \`import()\`; heavy rarely-used components load lazily with a skeleton fallback.
- Static assets through imports (hashed URLs) or \`public/\` for verbatim files; prefer imports.
- Config in \`vite.config.ts\` stays lean — resolve aliases (\`@/\` → \`src/\`) should match \`tsconfig.json\` paths.
",
  ".ai/guidelines/zustand/core.md": "# Zustand Core

- The store holds **client-owned** state only: UI preferences, drafts, selections. Server data lives in the installed Query/SWR/RSC boundary—writing fetched results into Zustand creates a second source of truth (flagged by \`NB-ARCH-009\`).
- Small, focused stores per concern beat one global store; colocate a feature's store inside the feature.
- Select narrowly: \`useStore((s) => s.sidebarOpen)\` — subscribing to the whole store re-renders on every change.
- Actions live inside the store definition (\`set\`/\`get\`), components call them — no external mutation of store state.
- Persist only what genuinely survives sessions (\`persist\` middleware) and version the storage schema.
- Before adding to the store, walk the ladder: \`useState\` → URL → Context → store (see state-management guideline).
",
}
`;
